--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "build-tools"]
 	path = build-tools
-	url = https://github.com/vrurg/raku-build-tools.git
+	url = git@github.com:vrurg/raku-build-tools.git
