--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,9 +6,7 @@ name: CI
 on:
   # Triggers the workflow on push or pull request events but only for the "main" branch
   push:
-    branches: [ "main", "v0.1" ]
-  pull_request:
-    branches: [ "main", "v0.1" ]
+    branches: [ "v0.1-CI-debug" ]
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
@@ -21,15 +19,12 @@ jobs:
     strategy:
       matrix:
         os:
-          - ubuntu-latest
-          - macOS-latest
           - windows-latest
         rakudo-version:
-          - "latest"
-          - "2021.12"
           - "2020.12"
       fail-fast: false
     uses: vrurg/raku-build-tools/.github/workflows/default-test-workflow.yml@workflow-v1
     with:
       os: ${{ matrix.os }}
       rakudo-version: ${{ matrix.rakudo-version }}
+    - run: raku -I. t/003-declaration.rakutest
