--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -38,7 +38,7 @@ jobs:
       - name: Install new zef 
         working-directory: zef
         run: |
-          raku -I. bin/zef install . --/test
+          rakudo-m -I. bin/zef install . --/test
       - uses: actions/checkout@v3
         name: Checkout repository
         with:
